fix_button_add_column

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,7 +20,7 @@ body,
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-rose-900 rounded-xl
+  @apply bg-fiolet rounded-xl
 }
 
 .task > ::-webkit-scrollbar-thumb {
